# volta-sim

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.ue5.yml  docker-compose.yml
api/: main.py  requirements.txt
api/routers/: adc.py  firmware.py  gpio.py  pwm.py  simulation.py  uart.py
api/services/: generate_proto.sh  voltad_client.py  websocket_manager.py  zmq_subscriber.py
bridge/: Cargo.toml  build.rs
bridge/proto/: volta.proto
bridge/src/: config.rs  main.rs
bridge/src/events/: mod.rs  zmq_publisher.rs
bridge/src/grpc/: server.rs
bridge/src/renode/: mod.rs  telnet.rs  uart_reader.rs
bridge/src/shm/: adc.rs  gpio.rs  header.rs  layout.rs  mod.rs  pwm.rs  uart.rs
cli/: volta
containers/api/: Dockerfile
containers/mcu/: Dockerfile  entrypoint.sh
containers/ue5/: Dockerfile  Dockerfile.package  entrypoint.sh  package.sh  pixel_streaming.json
containers/ue5-signaling/: Dockerfile
containers/web/: Dockerfile  nginx.conf
engine/: VoltaSim.uproject
engine/Config/: DefaultEngine.ini  DefaultGame.ini
engine/Source/VoltaSim/: VoltaGameMode.cpp  VoltaGameMode.h  VoltaSim.Build.cs  VoltaSim.Target.cs  VoltaSim.cpp  VoltaSim.h  VoltaSimEditor.Target.cs
firmware/examples/blinky/: Makefile  blinky.elf  main.c  stm32f407.ld
peripherals/: VoltaADCBridge.cs  VoltaGPIOBridge.cs  VoltaGPIOInputBridge.cs  VoltaPWMBridge.cs  VoltaUARTBridge.cs
tests/: test_blinky_e2e.sh  test_pwm_e2e.sh
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  types.ts
(+25 files in other folders)
