[package]
name = "voltad"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "voltad"
path = "src/main.rs"

[dependencies]
# SHM
memmap2 = "0.9"

# ZMQ
zmq = "0.10"

# Serialization
rmp-serde = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# gRPC
tonic = "0.12"
prost = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"

[build-dependencies]
tonic-build = "0.12"
